# lidar

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.cfg  start.sh  tox.ini
.github/workflows/: ci.yml  sync.yml
openpcdet/: README.md  pointcloud_inf_service.py  requirements.txt  setup.py  start.sh
openpcdet/config/: cfgs.py
openpcdet/docker/: Dockerfile  README.md
openpcdet/docs/: CUSTOM_DATASET_TUTORIAL.md  DEMO.md  GETTING_STARTED.md  INSTALL.md  changelog.md
openpcdet/docs/guidelines_of_approaches/: mppnet.md
openpcdet/pcdet/: __init__.py  config.py
openpcdet/pcdet/datasets/: __init__.py  dataset.py
openpcdet/pcdet/datasets/augmentor/: augmentor_utils.py  data_augmentor.py  database_sampler.py
openpcdet/pcdet/datasets/custom/: custom_dataset.py
openpcdet/pcdet/models/: __init__.py
openpcdet/pcdet/utils/: box_coder_utils.py  box_utils.py  calibration_kitti.py  common_utils.py  commu_utils.py  loss_utils.py  object3d_custom.py  object3d_kitti.py  transform_utils.py
openpcdet/svc/: inference.py  main.py  mqtt_server.py  udp_client.py  udp_dataset.py  ws_connection.py
openpcdet/tools/: _init_path.py  demo.py  inference.py  test.py  train.py
openpcdet/tools/eval_utils/: eval_utils.py
openpcdet/tools/process_tools/: create_integrated_database.py
openpcdet/tools/train_utils/: train_utils.py
openpcdet/tools/visual_utils/: open3d_vis_utils.py  visualize_utils.py
project/: lid23D.cap  main.py  redis_connect.py  test.py  udp_client.py  udp_server.py  websockets_client.py  worker.py
(+118 files in other folders)
